--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,11 @@ requests
 # Django REST Framework para crear APIs
 djangorestframework
 
-# Para documentación automática de la API (opcional pero recomendado)
-drf-spectacular==0.26.5
-
 # Para validación adicional y utilidades
 python-decouple==3.8  # Para variables de entorno
 Pillow==10.1.0  # Si necesitas manejo de imágenes
 
 # Para instalar las dependencias, ejecutar:
 # pip install -r requirements.txt
+
+psycopg2-binary
